@@ -7,6 +7,23 @@
          xmlns:html="http://www.w3.org/1999/xhtml">
 
 
+  <script type="application/x-javascript" src="chrome://firephp/content/md5.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/json_parse.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/FirePHPLib.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/jquery.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/FirePHP.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/FirebugNetOverride.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/reps.js"/>
+
+	<script>
+FBL.ns(function() { with (FBL) {
+
+		top.FirePHP.initialize();
+				
+}});
+	</script>
+
+
     <commandset id="mainCommandSet">
         <command id="cmd_openFirephpPermissions" oncommand="FirePHP.openPermissions()"/>
     </commandset>
@@ -15,10 +32,47 @@
     <menupopup id="menu_ToolsPopup">
         <menu id="menu_firephp" class="menuitem-iconic" image="chrome://firephp/skin/FirePHP_16.png"
               label="FirePHP" insertafter="menu_firebug">
-            <menupopup>
-                <menuitem label="Allowed Sites..." command="cmd_openFirephpPermissions"/>
+            <menupopup onpopupshowing="return FirePHP.onOptionsShowing(this);">
+	            <menuitem type="checkbox" label="FirePHP Enabled"
+	                       oncommand="FirePHP.onToggleOption(this)"
+	                       option="enabled"/>
+			        <menuseparator/>
+	            <menuitem label="Allowed Sites..." command="cmd_openFirephpPermissions"/>
+			        <menuseparator/>
+			        <menuitem label="FirePHP Website" oncommand="FirePHP.visitWebsite('main')"/>
+			        <menuitem label="Documentation" oncommand="FirePHP.visitWebsite('docs')"/>
+			        <menuitem label="Forums / Help" oncommand="FirePHP.visitWebsite('discuss')"/>
+			        <menuitem label="Issues Tracker" oncommand="FirePHP.visitWebsite('issues')"/>
+			        <menuseparator/>
+			        <menuitem id="Firebug_About" label="About" oncommand="FirePHP.openAboutDialog()"/>
             </menupopup>
         </menu>
     </menupopup>
+    
+    
+    <toolbar id="fbToolbar">
+
+        <toolbarbutton id="firephpMenu" type="menu" insertafter="fbFirebugMenu">
+            
+	        <menupopup id="firephpMenuPopup" onpopupshowing="return FirePHP.onOptionsShowing(this);">
+            
+            <menuitem type="checkbox" label="FirePHP Enabled"
+                       oncommand="FirePHP.onToggleOption(this)"
+                       option="enabled"/>
+		        <menuseparator/>
+            <menuitem label="Allowed Sites..." command="cmd_openFirephpPermissions"/>
+		        <menuseparator/>
+		        <menuitem label="FirePHP Website" oncommand="FirePHP.visitWebsite('main')"/>
+		        <menuitem label="Documentation" oncommand="FirePHP.visitWebsite('docs')"/>
+		        <menuitem label="Forums / Help" oncommand="FirePHP.visitWebsite('discuss')"/>
+		        <menuitem label="Issues Tracker" oncommand="FirePHP.visitWebsite('issues')"/>
+		        <menuseparator/>
+		        <menuitem id="Firebug_About" label="About" oncommand="FirePHP.openAboutDialog()"/>
+  				
+  				</menupopup>
+            
+        </toolbarbutton>
+
+    </toolbar>
 
 </overlay>
